# arduino-workspace

./: Makefile  README.md  TODO  arduino.mk  poetrybot.cpp
LCD-NHD0440/: Direct4bitNhdByteSender.cpp  I2C4BitNhdByteSender.cpp  LCD-NHD0440.h  Makefile  NewhavenLcd0440.cpp  nanodelay.h
debugger/: Debugger.md
debugger/arduino-dbg/: README.md  requirements.txt  setup.cfg
debugger/arduino-dbg/arch/: atmega32u4.py
debugger/arduino-dbg/arduino_dbg/: __init__.py  __main__.py  binutils.py  breakpoint.py  conf_files.py  debugger.py  dump.py  eval_location.py  protocol.py  repl.py  repl_command.py  repl_commands.py  serialize.py  stack.py  symbol.py  term.py  types.py  version.py
debugger/arduino-dbg/arduino_dbg/arch/: __init__.py  arm_thumb_common.conf  atmega328p.conf  atmega32u4.conf  avr_common.conf  avr_interface.py  samd51x19a.conf  samd_common.conf  thumb_interface.py
debugger/arduino-dbg/arduino_dbg/io/: __init__.py
debugger/arduino-dbg/test/: all.py  dbg_testcase.py  test_backtrace.py  test_char_ptr.py  test_cortex_hw_breakpoints.py  test_flash_locals.py  test_hw_breakpoints.py  test_implicit_ptr.py  test_locals.py  test_samd51_dump.py  test_samd51_memory_map.py  test_samd_memory_map.py  test_symbols.py
debugger/arduino-dbg/test/fixtures/: cortex-m4-img.dump  cortex-m4-test.elf  fixture-0.elf  get_byte.dump  print_msg.elf  read_byte.dump  startup.dump  user_setup.dump
debugger/arduino-dbg/test/mock/: __init__.py  mock_thumb.py
debugger/doc/: Debugger.md  README.md  cortex.md  install-gcc.md  library-size.md  linting.md  method-origins.md  stack-unwinding.md
empty/: Makefile  empty.cpp
