# (c) Copyright 2022 Aaron Kimball
#
# setuptools configuration

[global]

[metadata]
name = arduino-dbg
version = 0.1.0

[options]
packages = arduino-dbg
# TODO(aaron): Is there a way to auto-sync with requirements.txt?
install_requires =
    pyelftools >= 0.27
    pyserial >= 3.5
    sortedcontainers >= 2.4.0

# Include arch and platform .conf files.
include_package_data = True

[options.entry_points]
console_scripts =
    main = arduino_dbg:main

[flake8]
# PEP8 checker configuration

max-line-length = 120
# E114: Ignore 'indentation not multiple of four (comment)'; allow natural hanging inline comment blocks
# E116: Ignore 'unexpected indentation (comment)'; allow "hanging inline" comment blocks
# E221: Ignore multiple spaces before operator (used for aligning enum blocks)
# E222: Ignore multiple spaces after operator (used for aligning enum blocks)
# E266: Ignore too many leading '#' for block comment (sometimes I like adding "### FooBar section")
# E303: Ignore error on 2+ blank lines in a row (I like 2 lines between methods sometimes).
# W391: Ignore warning on blank line at EOF
extend-ignore = E114, E116, E221, E222, E266, E303, W391
