# (c) Copyright 2022 Aaron Kimball
#
# setuptools configuration

[global]

[metadata]
name = arduino-dbg
version = attr: arduino_dbg.version.DBG_VERSION_STR
description = Interactive debugger for Arduino device sketches
long_description = file: README.md
author = Aaron Kimball
author_email = akimball83@gmail.com
url = 'https://github.com/kimballa/arduino-workspace'
keywords = Arduino, debugger
license = BSD 3-Clause License
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Topic :: Software Development :: Debuggers
    Topic :: Software Development :: Embedded Systems

[options]
packages = find:
install_requires =
    pyelftools >= 0.27
    pyserial >= 3.5
    sortedcontainers >= 2.4.0

python_requires = >=3.6
zip_safe = True

# Include arch and platform .conf files in distribution; tests in the sdist require
# the test/fixtures/ directory. See MANIFEST.in for complete details.
include_package_data = True

[options.packages.find]
include = arduino_dbg*
exclude = test*

[options.entry_points]
console_scripts =
    arduino-dbg = arduino_dbg:main

[flake8]
# PEP8 checker configuration
max-line-length = 120

# E114: Ignore 'indentation not multiple of four (comment)'; allow natural hanging inline comment blocks
# E116: Ignore 'unexpected indentation (comment)'; allow "hanging inline" comment blocks
# E221: Ignore multiple spaces before operator (used for aligning enum blocks)
# E222: Ignore multiple spaces after operator (used for aligning enum blocks)
# E266: Ignore too many leading '#' for block comment (sometimes I like adding "### FooBar section")
# E303: Ignore error on 2+ blank lines in a row (I like 2 lines between methods sometimes).
# W391: Ignore warning on blank line at EOF
extend-ignore = E114, E116, E221, E222, E266, E303, W391
